# the-fastest-distribution-in-the-west

./: LICENSE.md  README.md  pyproject.toml
src/the_fastest_distribution_in_the_west/negative_binomial/: numba_negative_binomial.py
src/the_fastest_distribution_in_the_west/poisson/: numba_poisson.py
tests/: test_negative_binomial.py  test_poisson.py
